# oconnorlab-agent-config

./: .gitignore  ADVICE.md  AGENTS.md  CLAUDE.md  CLAUDE.user.md.example  NOTIFICATIONS.md  README.md  SETUP_INSTRUCTIONS.md  SOURCE_MAP.md  USER-CONFIG.md  claude-notify-hook.sh  notify-helpers.sh  o2-notify.sh  package-lock.json  package.json  settings.json  settings.template.json  settings.user.json.example  setup-o2.sh  setup.sh  test-hook-input.sh
.claude/: settings.json
feedback/: 2026-01-20-default-git-add-commit-permissions.md  2026-01-20-gh-auth-instructions.md  2026-01-21-feedback-location-docs.md  2026-01-21-remote-bridge-verification-hang.md  2026-01-21-source-echo-permissions.md  2026-01-23-global-gh-permissions.md  2026-01-23-init-project-permissions-first.md  2026-01-23-restart-after-permissions.md  2026-01-30-o2-ssh-key-setup.md  2026-02-01-memory-agent-spawns-without-notebook.md  2026-02-05-notebook-separate-repo.md  2026-02-21-postmortem-friction-scope.md  (+1 more)
global/: CLAUDE.md  settings.json
remote-bridge/: CLAUDE.md  Cargo.toml  README.md  install.sh
remote-bridge/config/: permissions.example.toml
remote-bridge/src/: error.rs  lib.rs  main.rs
remote-bridge/src/commands/: filesystem.rs  git.rs  mod.rs  slurm.rs  validation.rs
remote-bridge/src/config/: integrity.rs  mod.rs  permissions.rs
remote-bridge/src/rpc/: handlers.rs  handlers_test.rs  mod.rs  server.rs  types.rs
remote-bridge/src/sbatch/: mod.rs
remote-bridge/src/ssh/: connection.rs  mock.rs  mod.rs
remote-bridge/src/testing/: mod.rs
remote-bridge/tests/: rpc_integration.rs
(+314 files in other folders)
