[package]
name = "remote-bridge"
version = "0.1.0"
edition = "2021"
description = "Secure bridge for Claude Code to access remote hosts via SSH"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON-RPC (manual implementation, no external crate needed)

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex validation (for grep command)
regex = "1"

# Crypto for config integrity
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Home directory
dirs = "5"

# Signal handling
ctrlc = "3"

# UUID for sentinel markers
uuid = { version = "1", features = ["v4"] }

# Base64 encoding for file downloads
base64 = "0.22"

# Date/time handling
chrono = "0.4"

# PTY for proper terminal emulation during SSH auth
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"
